--- a/getztraclanding.html
+++ b/getztraclanding.html
@@ -3,12 +3,12 @@
 <head>
 	<title>Getztrac</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/getztraclanding.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css">
 </head>
 <body>
-
+  <h1>Hi</h1>
 	<nav class="navbar navbar-default">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
